--- a/src/App.css
+++ b/src/App.css
@@ -1,227 +1,22 @@
-.container {
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+.nanumgothic * {
+  font-family: "Nanum Gothic", sans-serif;
 }
 
-.page-top {
-    width: 1200px;
-    margin: 0 auto;
+body,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.page-top > div {
-    width: 1200px;
-    margin: 0 -680px;
-    padding: 0 680px;
-    background-image: url(../public/img/page_top_visual_menu.jpg);
-    background-size: cover;
-    height: 264px;
-    position: relative;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.page-top > div > h2 {
-    font-size: 35px;
-    color: #ffffff;
-    position: absolute;
-    margin-top: 100px;
-}
-
-.page-top > div > div {
-    font-size: 17px;
-    color: #ffffff;
-    position: absolute;
-    margin-top: 155px;
-}
-
-
-
-
-.page-body {
-    background-color: rgb(226, 215, 202);
-    width: 100%;
-    height: 506px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-}
-
-.page-body > .head-text {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-top: 80px;
-    margin-bottom: 20px;
-}
-
-.page-body > .body-text {
-    text-align: center;
-    font-size: 16px;
-    color: #666666;
-
-}
-
-.body-text-red {
-    color: #983b43;
-}
-
-.order_method_head_visual {
-    position: absolute;
-    top:250px;
-}
-
-.step {
-    height: 1000px;
-}
-
-.step-1 {
-    width: 1200px;
-    height: 374px;
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    margin:0 auto;
-    margin-top: 50px;
-}
-
-.step-1-text > p:first-child {
-    font-weight: 700;
-    font-size: 20px;
-    color: #983b43;
-    margin: 0 0 5px;
-}
-
-.step-1-text > p:nth-child(2) {
-    font-weight: 700;
-    font-size: 42px;
-    color: #222222;
-    margin: 0 0 26px;
-}
-
-.step-1-text > p:nth-child(3) {
-    font-size: 16px;
-    color: #666666;
-}
-
-.step-1-img {
-    display: flex;
-}
-
-.step-1-img > div {
-    margin: 0 50px;
-}
-
-.step-2 {
-    background-image: url(../public/img/order_method_step2_back.jpg);
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.step-2-body {
-    width: 1200px;
-    height: 638px;
-    display: flex;
-}
-
-.step-2-text {
-    margin-top: 50px;
-}
-
-.step-2-text > p:first-child {
-    font-weight: 700;
-    font-size: 20px;
-    color: #983b43;
-}
-
-.step-2-text > p:nth-child(2) {
-    font-weight: 700;
-    font-size: 42px;
-    color: #222222;
-}
-
-.step-2-text > p:nth-child(3) {
-    
-    font-size: 16px;
-    color: #666666;
-}
-
-.step-2-img{
-    width: 840px;
-    float: right;
-    margin: 50px 0;
-    margin-left: 140px;
-}
-
-.step-2-img > div {
-    background-color: white;
-    width: 260px;
-    height: 239px;
-    float: left;
-    text-align: center;
-    margin-left:20px;
-    margin-top: 20px; 
-    box-sizing: border-box;
-}
-
-.step-1-tt {
-    font-weight: 700;
-    font-size: 18px;
-    color: #222222;
-}
-
-.step-2-tt {
-    font-size: 14px;
-    color: #666666;
-}
-
-.step-3-tt {
-    font-size: 16px;
-    color: #666666;
-}
-
-.step-3 {
-    width: 1200px;
-    margin: 0 auto;
-    display: flex;
-}
-
-.step-3-text {
-    margin-top: 70px;
-}
-
-
-.step-3-text > p:first-child {
-    font-weight: 700;
-    font-size: 20px;
-    color: #983b43;
-    margin: 0 0 5px;
-}
-
-.step-3-text > p:nth-child(2) {
-    font-weight: 700;
-    font-size: 42px;
-    color: #222222;
-    margin: 0 0 26px;
-}
-
-.step-3-text > p:nth-child(3) {
-    font-size: 16px;
-    color: #666666;
-}
-
-.step-3-img {
-    margin-left: 100px;
-    margin-top: 30px;
-}
-
-.step-3-img > p {
-    display: inline-block;
-    margin-right: 50px;
-    font-weight: 600;
-    font-size: 1.2rem;
-}
-
-.step-3-img > div {
-    display: inline-block;
-}
-
-.step-3-img > div:nth-child(4) {
-    margin-top: 30px;
+body {
+  font-family: "Nanum Gothic", sans-serif;
 }
