--- a/src/component/Step2.module.css
+++ b/src/component/Step2.module.css
@@ -2,20 +2,17 @@
   background-image: url(../component/img/order_method_step2_back.jpg);
   background-position: center;
   display: flex;
-  border: 3px solid red;
 }
 
 .step_body {
   margin: 0 auto;
   width: 1200px;
   height: 638px;
-  border: 3px solid black;
 }
 
 .step_text {
-  margin-top: 50px;
-  float: left;
-  border: 3px solid gold;
+  margin-top: 70px;
+  width: 380px;
 }
 
 .step_text > p:first-child {
@@ -28,17 +25,26 @@
   font-weight: 700;
   font-size: 42px;
   color: #222222;
+  margin-top: -10px
 }
 
 .step_text > p:nth-child(3) {
   font-size: 16px;
   color: #666666;
+  margin-top: -10px;
+}
+
+.step_imgbox {
+  width: 820px;
+  margin-left: 380px;
+  position: relative;
+  bottom: 186px;
 }
 
 .step_img {
-  width: 820px;
-  float: right;
-  border: 3px solid blueviolet;
+  width: 100%;
+  margin: 0 0 -20px;
+  overflow: hidden;
 }
 
 .step_img > li {
@@ -52,10 +58,20 @@
   text-align: center;
 }
 
+.step_img > li:nth-child(3) {
+  margin-right: 0;
+}
+
+
+.step_img > li:nth-child(6) {
+  margin-right: 0;
+}
+
 .teaname {
   font-weight: 700;
   font-size: 18px;
   color: #222222;
+  margin-top: 3px;
 }
 
 .teaeng {
